# masstransit

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: run-tests.yml
examples/: callbacks.py
masstransit/: __init__.py  __main__.py  colors.py  consumer.py  decorators.py  producer.py  utils.py  worker.py
masstransit/models/: __init__.py  config.py  contract.py  getting_started.py  message.py
tests/: test___main__.py  test_consumer.py  test_decorators.py  test_producer.py  test_utils.py  test_worker.py
