[tool.ruff]

# Same as Black.
line-length = 120

# Assume Python 3.8
target-version = "py310"

[tool.poetry]
name = "masstransit"
version = "0.1.0"
description = "MassTransit for python."
authors = ["Jony Kalavera <mr.jony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
pydantic = "^2.7.4"
python-dateutil = "^2.9.0.post0"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
mypy = "*"
pytest-mock = "*"
debugpy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
