##############################################################################
# RUFF SETTINGS                                                             #
##############################################################################

[tool.ruff]

# Same as Black.
line-length = 119

# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
exclude = ["__pycache__", ".pytest_cache", ".mypy_cache", ".venv",]

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "B", "T20", "TCH", "ASYNC", "U", "UP", "LOG", "G", "ERA", "SIM", "D" ]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417", "PLR0913", "PLR2004", ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

##############################################################################
# POETRY SETTINGS                                                            #
##############################################################################
[tool.poetry]
name = "masstransit"
version = "0.1.1"
description = "MassTransit for python."
authors = ["Jony Kalavera <mr.jony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
pydantic = "^2.7.4"
python-dateutil = "^2.9.0.post0"
typer = "^0.12.3"
pydantic-settings = {extras = ["yaml"], version = "^2.4.0"}

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
mypy = "*"
pytest-mock = "*"
debugpy = "*"
types-pika = "^1.2.0b1"
types-python-dateutil = "^2.9.0.20240316"
pytest-cov = "^5.0.0"
pytest-asyncio = "^1.0.0"


[tool.poetry.group.devel.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
