##############################################################################
# PROJECT SETTINGS                                                           #
##############################################################################

[project]
name = "masstransit"
version = "0.1.2"
description = "MassTransit for python."
authors = [{ name = "Jony Kalavera", email = "mr.jony@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pika>=1.3.2,<2",
    "pydantic-settings[yaml]>=2.4.0,<3",
    "pydantic>=2.12.5,<3",
    "python-dateutil>=2.9.0.post0,<3",
    "typer>=0.12.5,<0.13",
]

[dependency-groups]
dev = [

    "pytest",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "ty>=0.0.22",
    "types-pika>=1.2.0b1,<2",
    "types-python-dateutil>=2.9.0.20240316,<3",
]
devel = ["ipython>=8.26.0,<9"]

##############################################################################
# UV SETTINGS                                                              #
##############################################################################

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

##############################################################################
# RUFF SETTINGS                                                              #
##############################################################################

[tool.ruff]

# Same as Black.
line-length = 119

# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
exclude = ["__pycache__", ".pytest_cache", ".mypy_cache", ".venv",]

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "B", "T20", "TCH", "ASYNC", "U", "UP", "LOG", "G", "ERA", "SIM", "D" ]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417", "PLR0913", "PLR2004", ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

##############################################################################
# TY SETTINGS                                                                #
##############################################################################

[tool.ty.environment]
python-version = "3.10"

